# nix-redox

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  flake.nix
.agent/: napkin.md  plan.md
.pi/: prompt-history.jsonl
.pi/skills/redox-book/: SKILL.md
docs/: syscall-debugging.md
docs/redox-book/: INDEX.md  refresh.sh
docs/redox-book/pages/: aarch64.md  advanced-build.md  advanced-podman-build.md  asking-questions.md  avoiding-panics.md  best-practices.md  boot-process.md  build-phases.md  build-process.md  build-system-reference.md  building-redox.md  chat.md  ci.md  coding-and-building.md  communication.md  components.md  configuration-settings.md  contributing.md  creating-proper-bug-reports.md  creating-proper-pull-requests.md  developer-faq.md  developing-for-redox.md  drivers.md  event-scheme.md  everything-is-a-file.md  example.md  features.md  filing-issues.md  getting-started.md  graphics-windowing.md  gui.md  hardware-support.md  how-redox-compares.md  i686.md  important-programs.md  including-programs.md  influences.md  installing.md  introducing-redox.md  introduction.md  (+48 more)
examples/: README.md
examples/dev-workstation/: README.md  configuration.nix  flake.nix
examples/graphical-desktop/: README.md  configuration.nix  flake.nix
examples/minimal/: README.md  configuration.nix  flake.nix
examples/my-redox-system/: README.md  configuration.nix  flake.nix
examples/my-redox-system/.pi/: prompt-history.jsonl
irohd/: Cargo.toml  build-plan.json
irohd/src/: bridge.rs  config.rs  handles.rs  main.rs  scheme.rs
nix/flake-modules/: apps.nix  checks.nix  devshells.nix  packages.nix  redox-env.nix  system.nix  treefmt.nix
nix/lib/: bridge-eval.nix  kernel-buildRustCrate.nix  redox-buildRustCrate.nix  stub-libs.nix
nix/nixos-modules/: default.nix  development.nix  redox.nix
nix/patches/: redoxfs-uid-gid-override.patch
nix/pkgs/: default.nix
nix/pkgs/host/: fix-elf-palign.nix  hash-manifest.nix  installer.nix  kprofiling.nix  pkgar-repo.nix  redoxer.nix
nix/pkgs/infrastructure/: boot-test.nix  bootstrap.nix  bridge-rebuild-test.nix  bridge-test.nix  build-bridge.nix  build-ripgrep.nix  build-ripgrep.sh  build-snix.nix  build-snix.sh  cloud-hypervisor-runners.nix  default.nix  functional-test.nix  https-cache-test.nix  initfs-tools.nix  mk-vm-test.nix  network-install-test.nix  network-test.nix  qemu-runners.nix  ripgrep-redox-plan.json  ripgrep-source-bundle.nix  serve-cache.nix  snix-source-bundle.nix  snix-upstream-source.nix  test-binary-cache.nix
nix/pkgs/patches/: bash-redox-patches.py  git-redox-patches.py  git-redox-terminal.py  graphicscreen-mmap.py  iroh-quinn-udp-fallback-redox.rs  netdev-redox-patch.py  netwatch-redox.rs  randd-scheme-root-read.patch  randd-scheme-root-read.py  surge-ping-redox-stub.rs  virtio-netd-irq-wakeup.patch  virtio-netd-rx-recycle.patch
nix/pkgs/system/: base-build-plan.json  base.nix  bootloader.nix  kernel-build-plan.json  kernel.nix  patch-relibc-abort-dso.py  patch-relibc-environ-diag.py  patch-relibc-fork-lock.py  patch-relibc-fork-noalloc.py  patch-relibc-getenv-diag.py  patch-relibc-ld-so-argv-utf8.py  patch-relibc-ld-so-cwd.py  patch-relibc-ns-fd.py  patch-relibc-run-init.py  relibc.nix
nix/pkgs/userspace/: bash-redox.nix  bat.nix  buffer-pool.nix  bzip2-redox.nix  cc-wrapper-redox.nix  cmake-redox.nix  diffutils-redox.nix  dust.nix  exampled.nix  extrautils.nix  fd.nix  fontconfig-redox.nix  freetype2-redox.nix  fribidi-redox.nix  gdb-protocol.nix  gdbstub.nix  gettext-redox.nix  git-redox.nix  glib-redox.nix  gnu-make.nix  harfbuzz-redox.nix  helix-build-plan.json  hexyl.nix  intelflash.nix  ion-build-plan.json  irohd-build-plan.json  libcxx-redox.nix  libffi-redox.nix  libgif-redox.nix  libiconv-redox.nix  libpng-redox.nix  libstdcxx-shim.nix  libtiff-redox.nix  lld-wrapper.nix  llvm-redox.nix  lsd.nix  lz4-redox.nix  mk-c-library.nix  mk-userspace.nix  ncurses-redox.nix  (+42 more)
nix/redox-system/: lib.nix
nix/redox-system/examples/: configuration.nix
nix/redox-system/lib/: make-esp-image.nix  make-redoxfs-image.nix
nix/redox-system/modules/: activation.nix  boot.nix  environment.nix  graphics.nix  hardware.nix  iroh.nix  networking.nix  programs.nix  security.nix  services.nix  snix.nix  system.nix  users.nix  virtualisation.nix
nix/redox-system/profiles/: boot-generation-select-test.nix  bridge-rebuild-test.nix  bridge-test.nix  development.nix  e2e-rebuild-test.nix  functional-test.nix  graphical.nix  https-cache-test.nix  iroh-test.nix  multi-user-test.nix  network-install-test.nix  network-test.nix  parallel-build-test.nix  rebuild-generations-test.nix  sandbox-test.nix  scheme-daemon-test.nix  scheme-native.nix  self-hosting-test.nix  self-hosting.nix
nix/redox-system/test-scripts/: 01-shell.ion  02-filesystem.ion  03-devices.ion  04-env.ion  05-cli-tools.ion  05-multi-user.ion  06-snix-eval.ion  07-manifest.ion  08-store.ion  09-generations.ion  10-package-mgr.ion  11-upgrade.ion  12-rebuild.ion  13-fetchers.ion  14-flakes.ion  15-sandbox.ion  16-proxy.ion  17-timing.ion  18-env-bash.ion  19-upgrade-pipeline.ion  20-proxy-ns.ion  21-e2e-rebuild.ion
nix/tests/: artifacts.nix  eval.nix  mock-pkgs.nix
openspec/changes/add-missing-redox-crates/: design.md  proposal.md
openspec/changes/boot-generation-select/: design.md  proposal.md  tasks.md
snix-redox/: Cargo.toml  build-plan.json  regenerate-build-plan.sh  upstream
snix-redox/src/: activate.rs  bridge.rs  cache_source.rs  derivation.nix  derivation_builtins.rs  eval.rs  fetchers.rs  file_io_worker.rs  flake.rs  install.rs  known_paths.rs  lib.rs  local_build.rs  main.rs  rebuild.rs  sandbox.rs  snix_io.rs  system.rs
snix-redox/src/build_proxy/: allow_list.rs  handler.rs  lifecycle.rs
snix-redox/src/profiled/: handles.rs  mapping.rs  mod.rs  scheme.rs
snix-redox/src/stored/: handles.rs  lazy.rs  mod.rs  resolve.rs  scheme.rs
snix-redox/testdata/: ch49594n9avinrf8ip0aslidkc4lxkqv-foo.drv  ss2p4wmxijn652haqyd7dckxwl4c7hxx-bar.drv
snix-redox/tests/redox/: proxy_namespace_test.rs
src/gdbstub/: Cargo.toml
(+260 files in other folders)
