[package]
name = "irohd"
version = "0.1.0"
edition = "2021"
description = "iroh P2P networking scheme daemon for Redox OS"

[[bin]]
name = "irohd"
path = "src/main.rs"
test = false

[dependencies]
# iroh P2P networking
iroh = { version = "0.35", default-features = false }

# Async runtime (iroh requires tokio)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

# Serialization for config and .control protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Redox scheme protocol (only used on Redox target)
[target.'cfg(target_os = "redox")'.dependencies]
redox-scheme = "0.11"
redox_syscall = { version = "0.7", features = ["std"] }
libredox = "0.1"
