# snix-redox workspace
#
# This workspace includes snix-redox (our crate) and the upstream snix crates
# extracted by nix/pkgs/infrastructure/snix-upstream-source.nix. The upstream
# crates use workspace.dependencies for version resolution, so they must be
# workspace members.
#
# For local development, `upstream/` is a symlink to the Nix derivation output.
# For Nix builds, it's populated by the build system.

[workspace]
resolver = "2"
members = [
  ".",
  "upstream/nix-compat",
  "upstream/nix-compat-derive",
  "upstream/eval",
  "upstream/eval/builtin-macros",
  "upstream/glue",
  "upstream/store",
  "upstream/castore",
  "upstream/build",
  "upstream/serde",
  "upstream/tracing",
  "upstream/cli/base",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.91.1"

# Upstream snix workspace dependency versions.
# Copied from https://git.snix.dev/snix/snix @ eee477929d6b500936556e2f8a4e187d37525365
[workspace.dependencies]
anyhow = "1.0.86"
async-compression = "0.4.12"
async-process = "2.2.4"
async-stream = "0.3.5"
axum = "0.7.5"
axum-extra = "0.9.3"
axum-range = "0.4.0"
bigtable_rs = "0.2.18"
bitflags = "2.6.0"
blake3 = "1.5.4"
bstr = "1.10.0"
bytes = "1.7.1"
clap = "4.5.16"
codemap = "0.1.3"
codemap-diagnostic = "0.1.2"
count-write = "0.1.0"
criterion = "0.5"
data-encoding = "2.6.0"
digest = "0.10.7"
dirs = "4.0.0"
ed25519 = "2.2.3"
ed25519-dalek = "2.1.1"
erased-serde = "0.4.5"
expect-test = "1.5.0"
fastcdc = "3.1.0"
fuse-backend-rs = "=0.12.0"
futures = "0.3.30"
genawaiter = { version = "0.99.1", default-features = false }
hashbrown = "0.15.4"
hex-literal = "0.4.1"
http = "1.1.0"
hyper-util = "0.1.7"
itertools = "0.12.1"
lexical-core = "0.8.5"
libc = "0.2.158"
lru = "0.12.4"
md-5 = "0.10.6"
mimalloc = "0.1.43"
nix = "0.27.1"
nom = "8.0"
object_store = "0.13.1"
opentelemetry = "0.30.0"
opentelemetry-http = "0.30.0"
opentelemetry-otlp = "0.30.0"
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry_sdk = "0.30.0"
os_str_bytes = "6.6"
parking_lot = "0.12.3"
path-clean = "0.1"
petgraph = "0.6.5"
pin-project = "1.1"
pin-project-lite = "0.2.14"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0.86"
proptest = { version = "1.5.0", default-features = false }
prost = "0.13.1"
prost-build = "0.13.1"
quote = "1.0.37"
redb = "3.1.0"
regex = "1.10.6"
reqwest = { version = "0.13.1", default-features = false, features = ["rustls-no-provider", "http2", "charset", "stream"] }
# Force rustls to use ring backend instead of aws-lc-rs (relibc lacks __isoc23_sscanf, __fprintf_chk)
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
reqwest-middleware = { version = "0.5.0", default-features = false }
reqwest-tracing = { version = "0.6.0", default-features = false }
rnix = "0.14.0"
rowan = "0.16"
rstest = { version = "0.26.1", default-features = false }
rstest_reuse = "0.7.0"
rustc-hash = "2.0.0"
rustyline = "17.0.1"
serde = "1.0.209"
serde_json = "1.0"
serde_qs = "0.12.0"
serde_tagged = "0.3.0"
serde_with = { version = "3.9.0", default-features = false, features = ["macros"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
smol_str = "0.2.2"
tabwriter = "1.4"
tempfile = "3.12.0"
test-strategy = "0.2.1"
thiserror = "2.0"
threadpool = "1.8.1"
tokio = "1.39.3"
tokio-listener = "0.5.1"
tokio-retry = "0.3.0"
tokio-stream = "0.1.15"
tokio-tar = { package = "astral-tokio-tar", version = "0.5.6" }
tokio-test = "0.4.4"
tokio-util = "0.7.11"
tonic = { version = "0.13.1", default-features = false, features = ["transport", "codegen", "prost", "tls-ring", "tls-native-roots"] }
tonic-build = "0.13.1"
tonic-health = { version = "0.13.1", default-features = false }
tonic-reflection = "0.13.1"
tower = "0.4.13"
tower-http = "0.6.2"
tower-otel-http-metrics = "0.16.0"
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-indicatif = "0.3.7"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.5"
tracing-tracy = "=0.11.1"
trybuild = "1.0.99"
url = { version = "2.5.2", features = ["serde"] }
vhost = "=0.6.1"
vhost-user-backend = "=0.8.0"
virtio-bindings = "=0.2.6"
virtio-queue = "=0.7.1"
vm-memory = "=0.10.0"
vmm-sys-util = "=0.11.2"
vu128 = "1.1.0"
walkdir = "2.5.0"
which = "^8.0.0"
wu-manber = { git = "https://github.com/tvlfyi/wu-manber.git" }
xattr = "1.3.1"
zstd = "0.13.2"

# ─── snix-redox package ────────────────────────────────────────────────────

[package]
name = "snix-redox"
version = "0.4.0"
edition = "2021"
description = "Nix evaluator, store manager, and binary cache client for Redox OS"

[[bin]]
name = "snix"
path = "src/main.rs"
test = false

[[bin]]
name = "proxy_namespace_test"
path = "tests/redox/proxy_namespace_test.rs"
test = false

[lib]
name = "snix_redox"
path = "src/lib.rs"
test = false

[dependencies]
# === Upstream snix crates ===
nix-compat = { path = "upstream/nix-compat", default-features = false, features = ["serde"] }
snix-eval = { path = "upstream/eval", default-features = false, features = ["impure"] }
snix-glue = { path = "upstream/glue", default-features = false }
snix-store = { path = "upstream/store", default-features = false, features = [] }
snix-castore = { path = "upstream/castore", default-features = false, features = [] }
snix-build = { path = "upstream/build", default-features = false, features = [] }

# === Async runtime (upstream snix requires tokio) ===
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "fs"] }

# === Sync HTTP client for binary cache (Redox-side, not eval) ===
ureq = { version = "3.0", default-features = false, features = ["rustls"] }

# === Compression for NAR files (pure Rust) ===
ruzstd = "0.8"
lzma-rs = "0.3"
bzip2-rs = "0.1"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

# === Standard utilities ===
clap = { version = "4", features = ["derive", "env"] }
serde = { version = ">=1.0.100, <1.0.218", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
blake3 = { version = "1.8", default-features = false, features = ["pure"] }
data-encoding = "2"
thiserror = "2"
bytes = "1"
bstr = "1"
genawaiter = { version = "0.99.1", default-features = false }

# Redox-only: scheme daemon support (stored, profiled) and sandboxing.
[target.'cfg(target_os = "redox")'.dependencies]
redox-scheme = "0.11"
redox_syscall = { version = "0.7", features = ["std"] }
libredox = { version = "0.1", features = ["mkns"] }
ioslice = "0.6"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
